# SpaceRogueLite

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
assets/: textures.json
assets/tilesets/grass_and_rocks/: rules.json
client/: CMakeLists.txt  conanfile.py
client/src/: main.cpp
client/src/graphics/: window.cpp
client/src/net/: client.cpp  client.h  clientmessagehandler.cpp  clientmessagehandler.h  clientmessagetransmitter.cpp  clientmessagetransmitter.h  commandparser.h  commandqueue.h  inputcommandhandler.cpp  inputcommandhandler.h
client/test_package/: conanfile.py
core/: CMakeLists.txt  conanfile.py
core/include/: actorspawner.h  components.h  game.h  grid.h  tilevariant.h
core/include/generation/: generationstrategy.h  tileset.h  wfcstrategy.h  wfctileset.h
core/include/generation/wfc/: wfcstrategy.h  wfctileset.h
core/include/utils/: randomutils.h  timing.h
core/src/: actorspawner.cpp  game.cpp  grid.cpp
core/src/generation/: generationstrategy.cpp  wfcstrategy.cpp  wfctileset.cpp
core/src/generation/wfc/: wfcstrategy.cpp  wfctileset.cpp
core/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
docs/: wfc-progress-reporting.md
graphics/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
graphics/cmake/: CompileShaders.cmake
graphics/include/: camera.h  entityrenderlayer.h  entityrendersystem.h  inputhandler.h  rendercomponents.h  renderlayer.h  textureloader.h  tilerenderer.h  tiletypes.h  utils.h  window.h
graphics/include/renderlayers/: renderlayer.h
graphics/include/renderlayers/entities/: entityrendersystem.h
graphics/include/renderlayers/tiles/: tileatlas.h  tilemap.h  tilerenderer.h  tiletypes.h
graphics/shaders/: chunk_display.frag.hlsl  chunk_display.vert.hlsl  colored_quad.frag.hlsl  simple_square.frag  simple_square.frag.hlsl  simple_square.vert  simple_square.vert.hlsl  textured_quad.frag.hlsl  textured_quad.vert.hlsl  tilecompose.frag.hlsl  tilecompose.vert.hlsl
graphics/src/: camera.cpp  entityrenderlayer.cpp  entityrendersystem.cpp  inputhandler.cpp  textureloader.cpp  tileatlas.cpp  tilemap.cpp  tilerenderer.cpp  window.cpp
graphics/src/renderlayers/entities/: entityrendersystem.cpp
graphics/src/renderlayers/tiles/: tileatlas.cpp  tilemap.cpp  tilerenderer.cpp
graphics/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
graphics/test_package/src/: example.cpp
net/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  dummy.cpp
net/include/: connectionconfig.h  handlerregistry.h  message.h  messagefactory.h  messagehandler.h  messagetransmitter.h
net/test_package/: CMakeLists.txt  conanfile.py
net/test_package/src/: example.cpp
scripts/: build.sh  build_all.sh  build_packages.sh  install.sh  merge_compile_commands.py
server/: CMakeLists.txt  conanfile.py
server/src/: main.cpp
server/src/net/: handlerregistry.h  server.cpp  server.h  servermessagehandler.cpp  servermessagehandler.h  servermessagetransmitter.cpp  servermessagetransmitter.h
server/test_package/: conanfile.py
